--- a/_15_GameOfCraps/_15_GameOfCraps.csproj
+++ b/_15_GameOfCraps/_15_GameOfCraps.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\RollDice.cs" />
+    <Compile Include="Properties\CrapsGame.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
