--- a/_15_GameOfCraps/_15_GameOfCraps.csproj
+++ b/_15_GameOfCraps/_15_GameOfCraps.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\RollDice.cs" />
     <Compile Include="Properties\CrapsGame.cs" />
+    <Compile Include="Properties\Statistics.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
